load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "task",
    srcs = ["task.go"],
    importpath = "github.com/codding-buddha/mini-kube/task",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_docker_docker//api/types:go_default_library",
        "@com_github_docker_docker//api/types/container:go_default_library",
        "@com_github_docker_docker//client:go_default_library",
        "@com_github_docker_docker//pkg/stdcopy:go_default_library",
        "@com_github_docker_go_connections//nat:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
