load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "worker",
    srcs = [
        "api.go",
        "handlers.go",
        "stats.go",
        "worker.go",
    ],
    importpath = "github.com/codding-buddha/mini-kube/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//task",
        "@com_github_go_chi_chi_v5//:go_default_library",
        "@com_github_golang_collections_collections//queue:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_shirou_gopsutil_v3//cpu:go_default_library",
        "@com_github_shirou_gopsutil_v3//disk:go_default_library",
        "@com_github_shirou_gopsutil_v3//load:go_default_library",
        "@com_github_shirou_gopsutil_v3//mem:go_default_library",
    ],
)
